<resources>
    <string name="app_name">PhoneBook</string>
    <string name="DigitalPhonebook">Digital Phonebook</string>
    <string name="browse">Browse</string>
    <string name="Add">Add</string>
    <string name="FName">First Name</string>
    <string name="LName">Last Name</string>
    <string name="mail">E-mail</string>
    <string name="Phone">Phone Number</string>
    <string name="title_activity_view_list">ViewList</string>
    <string name="contact_info_header">Contact Details</string>
    <string name="add_contact_header">Add Contact</string>
</resources>